# MLAlgoFromScratch

./: .gitignore  main.py  pyproject.toml  requirements.txt  test.ipynb
GRPO/: README.md
GRPO/simple_grpo/: simple_grpo_detail_test.ipynb
GRPO/unsloth/: unsloth_grpo.ipynb
GradientDescent/: grad_LR.py  grad_LR_schedular.py
Loss function visualization/: README.md
PReF/: README.md  eda.ipynb  training_base_reward_func.ipynb  trial1.ipynb
Transformer/: README.md  config.py  dataset.py  model.py  notes.ipynb  test.ipynb  train.py
ViRFT/: grpo_trainer.py
ViT/: model.py  model_mildlyoverfitted.py  notes.ipynb
ViT/try1/: test.py  trial_mildlyoverfitted.py  verification.py
ViT/try2/: trial_lucidrains_.py
leetcode/: 1912.ipynb
leetcode/linked_list/: linked_list.ipynb
runs/tmodel/: events.out.tfevents.1739781165.P714NBSEANCHANG.27200.0  events.out.tfevents.1739781287.P714NBSEANCHANG.25892.0  events.out.tfevents.1739781425.P714NBSEANCHANG.27516.0  events.out.tfevents.1739781480.P714NBSEANCHANG.25900.0  events.out.tfevents.1739781934.P714NBSEANCHANG.23248.0  events.out.tfevents.1739782086.P714NBSEANCHANG.6800.0  events.out.tfevents.1739782494.P714NBSEANCHANG.27100.0  events.out.tfevents.1739782688.P714NBSEANCHANG.22676.0  events.out.tfevents.1739784293.P714NBSEANCHANG.22604.0  events.out.tfevents.1739785251.P714NBSEANCHANG.13488.0  events.out.tfevents.1739785376.P714NBSEANCHANG.8432.0  events.out.tfevents.1739786267.P714NBSEANCHANG.11944.0  events.out.tfevents.1739843940.P714NBSEANCHANG.27816.0  events.out.tfevents.1739844440.P714NBSEANCHANG.4852.0  events.out.tfevents.1739845018.P714NBSEANCHANG.28124.0  events.out.tfevents.1739848198.P714NBSEANCHANG.31288.0  events.out.tfevents.1739849064.P714NBSEANCHANG.3572.0  events.out.tfevents.1739850206.P714NBSEANCHANG.31240.0  events.out.tfevents.1739850678.P714NBSEANCHANG.23056.0  events.out.tfevents.1739856183.P714NBSEANCHANG.37220.0  events.out.tfevents.1739858003.P714NBSEANCHANG.36928.0  events.out.tfevents.1739861038.P714NBSEANCHANG.33380.0  events.out.tfevents.1739861142.P714NBSEANCHANG.24300.0  events.out.tfevents.1739861238.P714NBSEANCHANG.25092.0  events.out.tfevents.1739861549.P714NBSEANCHANG.22480.0  events.out.tfevents.1739861626.P714NBSEANCHANG.41912.0  events.out.tfevents.1739861840.P714NBSEANCHANG.40644.0  events.out.tfevents.1739861967.P714NBSEANCHANG.38148.0  events.out.tfevents.1739862041.P714NBSEANCHANG.15892.0  events.out.tfevents.1739862185.P714NBSEANCHANG.36260.0  events.out.tfevents.1739862417.P714NBSEANCHANG.30668.0  (+17 more)
tokenizer_embedding/: embedding.ipynb  tokenizer.ipynb
(+6 files in other folders)
