[project]
name = "mlalgofromscratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "certifi>=2025.1.31",
    "datasets>=3.3.2",
    "ipykernel>=6.29.5",
    "sentence-transformers>=3.4.1",
    "tensorboard>=2.19.0",
    "timm>=1.0.15",
    "tokenizers>=0.21.0",
]


[project.optional-dependencies]
cpu = [
  "torch==2.5.1",
  "torchvision==0.20.1",
]
cu121 = [
  "torch==2.5.1+cu121",
  "torchvision==0.20.1+cu121",
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu121" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu121", extra = "cu121" },
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu121", extra = "cu121" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
