[project]
name = "mlalgofromscratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.9.0",
    "bitsandbytes>=0.46.1",
    "certifi>=2025.1.31",
    "cut-cross-entropy>=25.1.1",
    "datasets>=3.3.2",
    "huggingface-hub>=0.29.1",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "peft>=0.16.0",
    "python-certifi-win32>=1.6.1",
    "requests==2.32.3",
    "sentence-transformers>=3.4.1",
    "tensorboard>=2.19.0",
    "timm>=1.0.15",
    "tokenizers>=0.21.0",
    "triton>=3.1.0",
    "trl>=0.19.1",
    "unsloth[cu124-torch251]",
    "vllm>=0.2.5",
    "xformers>=0.0.29.post1",
]


[project.optional-dependencies]
cpu = [
  "torch==2.5.1",
  "torchvision==0.20.1",
]
cu121 = [
  "torch==2.5.1+cu121",
  "torchvision==0.20.1+cu121",
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu121" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu121", extra = "cu121" },
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu121", extra = "cu121" },
]
unsloth = { git = "https://github.com/unslothai/unsloth.git" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
